[package]
name = "bevy_ethers"
version = "0.1.0"
authors = ["johnstarrysky@gmail.com"]
description = "A plugin for Egui integration into Bevy"
license = "MIT"
edition = "2021"
exclude = ["assets/**/*", ".github/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.9"
crossbeam = "0.8"
tokio = "1"
ethers = { version = "1.0", features = ["ws", "openssl"] }